force-app/src/objects/Lead.object
<CustomObject>
    <fields>
        <fullName>Event_1_2nd_attendee_Emailaddress__c</fullName>
        <inlineHelpText>Used by eTouches</inlineHelpText>
        <label>Event 1 2nd attendee Emailaddress</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Event_1_2nd_attendee_First_Name__c</fullName>
        <inlineHelpText>Used by eTouches</inlineHelpText>
        <label>Event 1 2nd attendee First Name</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Event_1_2nd_attendee_Last_Name__c</fullName>
        <inlineHelpText>Used by eTouches</inlineHelpText>
        <label>Event 1 2nd attendee Last Name</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Event_1__c</fullName>
        <inlineHelpText>Used by eTouches</inlineHelpText>
        <label>Event 1</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Event_2_2nd_attendee_Emailaddress__c</fullName>
        <inlineHelpText>Used by eTouches</inlineHelpText>
        <label>Event 2 2nd attendee Emailaddress</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Event_2_2nd_attendee_First_Name__c</fullName>
        <inlineHelpText>Used by eTouches</inlineHelpText>
        <label>Event 2 2nd attendee First Name</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Event_2_2nd_attendee_Last_Name__c</fullName>
        <inlineHelpText>Used by eTouches</inlineHelpText>
        <label>Event 2 2nd attendee Last Name</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Event_2__c</fullName>
        <inlineHelpText>Used by eTouches</inlineHelpText>
        <label>Event 2</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Event_3_2nd_attendee_Emailaddress__c</fullName>
        <inlineHelpText>Used by eTouches</inlineHelpText>
        <label>Event 3 2nd attendee Emailaddress</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Event_3_2nd_attendee_First_Name__c</fullName>
        <inlineHelpText>Used by eTouches</inlineHelpText>
        <label>Event 3 2nd attendee First Name</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Event_3_2nd_attendee_Last_Name__c</fullName>
        <inlineHelpText>Used by eTouches</inlineHelpText>
        <label>Event 3 2nd attendee Last Name</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Event_3__c</fullName>
        <inlineHelpText>Used by eTouches</inlineHelpText>
        <label>Event 3</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Fieldwork_Education__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Fieldwork Education</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Geographical_Preference__c</fullName>
        <label>Geographical Preference</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Region</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Global_Citizenship_reflection__c</fullName>
        <label>Global Citizenship reflection</label>
        <length>3000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Grade__c</fullName>
        <description>Used fro School Membership Application</description>
        <label>Grade</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>0 - New application</fullName>
                </value>
                <value>
                    <fullName>1 - Form 2 submitted</fullName>
                </value>
                <value>
                    <fullName>2 - Form 3 submitted</fullName>
                </value>
                <value>
                    <fullName>A - Fast Track</fullName>
                </value>
                <value>
                    <fullName>B - Standard</fullName>
                </value>
                <value>
                    <fullName>E - Not Ready</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Grades_your_School_offer__c</fullName>
        <label>Grades your School offer</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Early childhood</fullName>
                </value>
                <value>
                    <fullName>Primary/Elementary</fullName>
                </value>
                <value>
                    <fullName>Middle School</fullName>
                </value>
                <value>
                    <fullName>Senior/High School</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>IB_Curriculum_Programme_Evaluation__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IB Curriculum Programme Evaluation</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IMYC_Agency__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IMYC_Agency</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IPC_Agency__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IPC_Agency</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Independent_Schools_Inspectorate_ISI__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Independent Schools Inspectorate (ISI)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_CIS_school__c</fullName>
        <label>Is CIS school</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Job_Category__c</fullName>
        <label>Job Category</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Board Chair/CEO</fullName>
                </value>
                <value>
                    <fullName>Board Member</fullName>
                </value>
                <value>
                    <fullName>CFO/Business Manager</fullName>
                </value>
                <value>
                    <fullName>Chief Admission Officer</fullName>
                </value>
                <value>
                    <fullName>Deputy Head</fullName>
                </value>
                <value>
                    <fullName>Divisional Leader/Principal</fullName>
                </value>
                <value>
                    <fullName>Head/CEO of Group</fullName>
                </value>
                <value>
                    <fullName>Head of School</fullName>
                </value>
                <value>
                    <fullName>International Admission/Recruitment Officer</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Owner</fullName>
                </value>
                <value>
                    <fullName>Social/Emotional Counsellor</fullName>
                </value>
                <value>
                    <fullName>Student Services</fullName>
                </value>
                <value>
                    <fullName>Teacher</fullName>
                </value>
                <value>
                    <fullName>University Guidance Counsellor</fullName>
                </value>
                <value>
                    <fullName>University Leadership</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Job_Number__c</fullName>
        <description>Used in SG form for C&amp;R application process.</description>
        <label>Job Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Job_Title__c</fullName>
        <label>Job Title</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Jumpstart_Vacancy__c</fullName>
        <description>Used for  SurveyGizmo jumpstart application form</description>
        <label>Jumpstart Vacancy</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Language_of_Instruction_1__c</fullName>
        <label>Language of Instruction 1</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>CIS_RLanguages</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Language_of_Instruction_2__c</fullName>
        <label>Language of Instruction 2</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>CIS_RLanguages</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Language_of_Instruction_3__c</fullName>
        <label>Language of Instruction 3</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>CIS_RLanguages</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Languages__c</fullName>
        <label>Languages</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>CIS_RLanguages</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Latest_Diploma_Report__c</fullName>
        <label>Latest Diploma Report</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Latest_IB_DP_Evaluation_Report__c</fullName>
        <label>Latest IB DP Evaluation Report</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Latest_IB_MYP_Evaluation_Report__c</fullName>
        <label>Latest IB MYP Evaluation Report</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Latest_IB_PYP_Evaluation_Report__c</fullName>
        <label>Latest IB PYP Evaluation Report</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Latest_MYP_Report__c</fullName>
        <label>Latest MYP Report</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Latest_PYP_Report__c</fullName>
        <label>Latest PYP Report</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>List_Other_Accreditation_org__c</fullName>
        <label>List Other Accreditation Organisation</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Main_Phone_Number__c</fullName>
        <description>Used in SG School membership Application</description>
        <label>Main Phone Number</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Middle_States_Association_MSA__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Middle States Association (MSA)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Ministry_of_Education__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Ministry of Education (MoE)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Mobile_Phone__c</fullName>
        <label>Mobile Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>NCCT_China_education_agency__c</fullName>
        <defaultValue>false</defaultValue>
        <label>NCCT (China education agency)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Name_Location_of_Other_Campuses__c</fullName>
        <label>Name/Location of Other Campuses</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>New_England_Association_NEASC__c</fullName>
        <defaultValue>false</defaultValue>
        <label>New England Association (NEASC)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Newsletter_subscription__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Newsletter subscription</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ONESQA_Thailand_education_agency__c</fullName>
        <defaultValue>false</defaultValue>
        <label>ONESQA (Thailand education agency)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Official_Licence_Letter_Approval__c</fullName>
        <label>Official Licence/Letter Approval</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Ofsted__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Ofsted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Other_Accrediting_Evaluation_Org__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Other Accrediting/Evaluation Org</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Other_Agency_Accreditation_Report__c</fullName>
        <label>Other Agency Accreditation Report</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Personal_Email__c</fullName>
        <label>Personal Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Phone_country_code__c</fullName>
        <label>Phone country code</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Andorra (+376)</fullName>
                </value>
                <value>
                    <fullName>United Arab Emirates (+971)</fullName>
                </value>
                <value>
                    <fullName>Afghanistan (+93)</fullName>
                </value>
                <value>
                    <fullName>Antigua and Barbuda (+1-268)</fullName>
                </value>
                <value>
                    <fullName>Anguilla (+1-264)</fullName>
                </value>
                <value>
                    <fullName>Albania (+355)</fullName>
                </value>
                <value>
                    <fullName>Armenia (+374)</fullName>
                </value>
                <value>
                    <fullName>Angola (+244)</fullName>
                </value>
                <value>
                    <fullName>Antarctica (+672)</fullName>
                </value>
                <value>
                    <fullName>Argentina (+54)</fullName>
                </value>
                <value>
                    <fullName>American Samoa (+1-684)</fullName>
                </value>
                <value>
                    <fullName>Austria (+43)</fullName>
                </value>
                <value>
                    <fullName>Australia (+61)</fullName>
                </value>
                <value>
                    <fullName>Aruba (+297)</fullName>
                </value>
                <value>
                    <fullName>Azerbaijan (+994)</fullName>
                </value>
                <value>
                    <fullName>Bosnia and Herzegovina (+387)</fullName>
                </value>
                <value>
                    <fullName>Barbados (+1-246)</fullName>
                </value>
                <value>
                    <fullName>Bangladesh (+880)</fullName>
                </value>
                <value>
                    <fullName>Belgium (+32)</fullName>
                </value>
                <value>
                    <fullName>Burkina Faso (+226)</fullName>
                </value>
                <value>
                    <fullName>Bulgaria (+359)</fullName>
                </value>
                <value>
                    <fullName>Bahrain (+973)</fullName>
                </value>
                <value>
                    <fullName>Burundi (+257)</fullName>
                </value>
                <value>
                    <fullName>Benin (+229)</fullName>
                </value>
                <value>
                    <fullName>Saint Barthelemy (+590)</fullName>
                </value>
                <value>
                    <fullName>Bermuda (+1-441)</fullName>
                </value>
                <value>
                    <fullName>Brunei (+673)</fullName>
                </value>
                <value>
                    <fullName>Bolivia (+591)</fullName>
                </value>
                <value>
                    <fullName>Brazil (+55)</fullName>
                </value>
                <value>
                    <fullName>Bahamas (+1-242)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Phone_country_code_tempfield2__c</fullName>
        <label>Phone country code tempfield2</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Phone_country_code_tempfield__c</fullName>
        <label>Phone country code tempfield</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Position_Sought__c</fullName>
        <description>LCRF Application form</description>
        <label>Position Sought</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Power_to_award_own_degree__c</fullName>
        <label>Power to award own degree</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Preferred_First_Name__c</fullName>
        <label>Preferred First Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Prefix__c</fullName>
        <inlineHelpText>Used by eTouches.</inlineHelpText>
        <label>Prefix</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Primary_Subject_Area__c</fullName>
        <label>Primary Subject Area</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Subject_Area</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Primary_Subject_s__c</fullName>
        <label>Primary Subject(s)</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Subject</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Primary__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Primary</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Reason_for_CIS_Membership__c</fullName>
        <label>Reason for CIS Membership</label>
        <length>3000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Recent_Curriculum_Evaluation_Non_IB__c</fullName>
        <label>Recent Curriculum Evaluation - Non IB</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Religious_Affiliation__c</fullName>
        <label>Religious Affiliation</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Baptist</fullName>
                </value>
                <value>
                    <fullName>Catholic</fullName>
                </value>
                <value>
                    <fullName>Episcopal</fullName>
                </value>
                <value>
                    <fullName>Islamic</fullName>
                </value>
                <value>
                    <fullName>Jewish</fullName>
                </value>
                <value>
                    <fullName>Lutheran</fullName>
                </value>
                <value>
                    <fullName>Methodist</fullName>
                </value>
                <value>
                    <fullName>Non-denominational</fullName>
                </value>
                <value>
                    <fullName>None/independent</fullName>
                </value>
                <value>
                    <fullName>Other Christian</fullName>
                </value>
                <value>
                    <fullName>Other Religious Affiliation</fullName>
                </value>
                <value>
                    <fullName>Presbyterian</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Reports_Create_Date__c</fullName>
        <formula>CreatedDate</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Reports Create Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SG_Events_Services__c</fullName>
        <description>Used in Survey Gizmo for HSE</description>
        <label>Events &amp; Services</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Student Well-being Resources and Training</fullName>
                </value>
                <value>
                    <fullName>Intercultural Competency Training</fullName>
                </value>
                <value>
                    <fullName>Symposia on Intercultural Learning</fullName>
                </value>
                <value>
                    <fullName>Student Recruitment Tours</fullName>
                </value>
                <value>
                    <fullName>Student Recruitment Fairs</fullName>
                </value>
                <value>
                    <fullName>Global Forum on International Admission and Guidance</fullName>
                </value>
                <value>
                    <fullName>Regional Institutes on International Admission and Guidance</fullName>
                </value>
                <value>
                    <fullName>Student Registry</fullName>
                </value>
                <value>
                    <fullName>Guidance Counsellor Contact Lists</fullName>
                </value>
                <value>
                    <fullName>University Admission Contact Lists</fullName>
                </value>
                <value>
                    <fullName>Research Trends and Data</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SG_Member_Commitment__c</fullName>
        <description>Used in SG form for HSE</description>
        <label>Intl. Ed &amp; Global Citizenship Commitment</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>SG_Other_Campuses__c</fullName>
        <description>Used in Survey Gizmo form for HSE</description>
        <label>Other campuses</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>SG_Programs_Services__c</fullName>
        <description>Used by SG for HSE</description>
        <label>Intl. Student Programmes &amp; Services</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>SG_Recruiting_Regions__c</fullName>
        <description>Used in SG form by HSE</description>
        <label>Recruiting Regions</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>North America</fullName>
                </value>
                <value>
                    <fullName>Central and South America</fullName>
                </value>
                <value>
                    <fullName>The Caribbean</fullName>
                </value>
                <value>
                    <fullName>Europe</fullName>
                </value>
                <value>
                    <fullName>Asia</fullName>
                </value>
                <value>
                    <fullName>Africa</fullName>
                </value>
                <value>
                    <fullName>Oceania</fullName>
                </value>
                <value>
                    <fullName>None</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>School_Membership_Stage__c</fullName>
        <label>School Membership Stage</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>New Application</fullName>
                </value>
                <value>
                    <fullName>Form 2 requested</fullName>
                </value>
                <value>
                    <fullName>Form 2 submitted</fullName>
                </value>
                <value>
                    <fullName>Form 3 requested</fullName>
                </value>
                <value>
                    <fullName>Form 3 submitted</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Supporting_documentation_from_accreditin__c</fullName>
        <description>Used for SurveyGizmo HE lead form supporting documentation upload</description>
        <label>Supporting docs from accrediting org</label>
        <length>129000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Tax_Country_Code__c</fullName>
        <label>Tax Country Code</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>fferpcore__TaxCountryCode</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Tax_Registration_Number__c</fullName>
        <label>Tax Registration Number</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Teaching_Learning_Well_being_improvement__c</fullName>
        <label>Teaching/Learning/Well-being improvement</label>
        <length>3000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Test_Check__c</fullName>
        <label>Test Check</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Total_years_of_education__c</fullName>
        <label>Total years of education</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>US_States__c</fullName>
        <label>US States</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>US_States</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Western_Association_WASC__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Western Association (WASC)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Work_Email__c</fullName>
        <label>Work Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Years_of_Experience__c</fullName>
        <label>Years of Experience</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Years_of_International_Experience__c</fullName>
        <label>Years of International Experience</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Zip_Postal_code__c</fullName>
        <inlineHelpText>Used by eTouches.</inlineHelpText>
        <label>Zip/Postal code (non US)</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>npe01__Preferred_Email__c</fullName>
        <label>Preferred Email</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Personal</fullName>
                </value>
                <value>
                    <fullName>Work</fullName>
                </value>
                <value>
                    <fullName>Alternate</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>npe01__Preferred_Phone__c</fullName>
        <label>Preferred Phone</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Home</fullName>
                </value>
                <value>
                    <fullName>Work</fullName>
                </value>
                <value>
                    <fullName>Mobile</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>npsp__Batch__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>The batch this lead was created from.</inlineHelpText>
        <label>Batch</label>
        <referenceTo>npsp__Batch__c</referenceTo>
        <relationshipLabel>Leads</relationshipLabel>
        <relationshipName>Leads</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>npsp__CompanyCity__c</fullName>
        <label>Company City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>npsp__CompanyCountry__c</fullName>
        <label>Company Country</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>npsp__CompanyPostalCode__c</fullName>
        <label>Company Zip/Postal Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>npsp__CompanyState__c</fullName>
        <label>Company State/Province</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>npsp__CompanyStreet__c</fullName>
        <label>Company Street</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>pi__Needs_Score_Synced__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is no longer used.</description>
        <label>Needs Score Synced</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>pi__Pardot_Last_Scored_At__c</fullName>
        <description>Used for Account Engagement Scoring Categories. Indicates the last time a Scoring Category score was updated for this lead.

            Scoring Categories are used for multi-product engagement scoring in Account Engagement and are available to customers using Account Engagement Pro Edition and Account Engagement Ultimate Edition. Please visit this page for more information on this feature and how to set up Salesforce to view these scores: http://help.pardot.com/customer/portal/articles/2396977-scoring-categories-overview</description>
        <label>Account Engagement Last Scored At</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>pi__campaign__c</fullName>
        <description>The Account Engagement Campaign represents the first marketing touch with a prospect. It may be a campaign associated with your web site, landing page, paid search initiative, or any other marketing effort. Prospects may only be associated with one Account Engagement campaign. This value can later be changed manually or via an Automation Rule.</description>
        <label>Account Engagement Campaign</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pi__comments__c</fullName>
        <label>Account Engagement Comments</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>pi__conversion_date__c</fullName>
        <description>The date and time of the form, form handler, or landing page submission when an Account Engagement tracked anonymous visitor first became a known prospect.</description>
        <label>Account Engagement Conversion Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>pi__conversion_object_name__c</fullName>
        <description>This is the name of the object (form, form handler, landing page, or video form) that converted an anonymous visitor into a named prospect.</description>
        <label>Conversion Object Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pi__conversion_object_type__c</fullName>
        <description>The type of object which converted an anonymous visitor into a named prospect (form, form handler, landing page, or video form).</description>
        <label>Conversion Object Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pi__created_date__c</fullName>
        <description>The Account Engagement created date represents the date and time at which the Prospect record was created in Account Engagement. This will often differ from your Salesforce.com created date.</description>
        <label>Account Engagement Created Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>pi__first_activity__c</fullName>
        <label>Account Engagement First Activity</label>
        <type>DateTime</type>
    </fields>
</CustomObject>